2009-12-07  Nikolas Zimmermann  <nzimmermann@rim.com>

        Not reviewed. Add two tests generating new results to gtks collection of tests doing so.

        * platform/gtk/Skipped:

2009-12-07  Dirk Schulze  <krit@webkit.org>

        Reviewed by Adam Barth.

        If the tile of a pattern is bigger than the pattern and the
        pattern size is < 0.5, the SVGPaintServer produced a division
        by zero. This also only happens, if the attribute overflow is
        set to visible.
        This is a test with a pattern size of 0.1 and a tile size of 1. 

        * svg/custom/script-tests/small-pattern.js: Added.
        * svg/custom/small-pattern-expected.txt: Added.
        * svg/custom/small-pattern.html: Added.

2009-12-07  Kenneth Russell  <kbr@google.com>

        Reviewed by Dimitri Glazkov.

        [v8] WebCore::WebGLArrayBufferInternal::byteLengthAttrGetter NULL pointer
        https://bugs.webkit.org/show_bug.cgi?id=31889

        Fixed bug in handling of zero-argument constructor call.

        Test: fast/canvas/webgl/bug-31889.html

        * fast/canvas/webgl/bug-31889-expected.txt: Added.
        * fast/canvas/webgl/bug-31889.html: Added.

2009-12-07  Gustavo Noronha Silva  <gustavo.noronha@collabora.co.uk>

        Unreviewed. Landing files I forgot to add to my working copy
        before committing r51734.

        * media/media-can-play-ogg-expected.txt: Added.
        * media/media-can-play-ogg.html: Added.

2009-12-07  Alexey Proskuryakov  <ap@apple.com>

        Don't skip websocket/tests/url-with-credential.html, it's one of earlier tests that is
        to blame.

        * platform/mac/Skipped:

2009-12-07  Brian Weinstein  <bweinstein@apple.com>

        Rubber-stamped by Steve Falkenburg.

        Add one more fast/js test to the Skipped list - also due to:
        https://bugs.webkit.org/show_bug.cgi?id=32228.

        * platform/win/Skipped:

2009-12-07  Nikolas Zimmermann  <nzimmermann@rim.com>
