@@ -1,3 +1,13 @@
+2009-12-07  Alexey Proskuryakov  <ap@apple.com>
+
+        Reviewed by Darin Adler.
+
+        https://bugs.webkit.org/show_bug.cgi?id=32244
+        Test sending and receiving small WebSocket messages of different lengths
+
+        * websocket/tests/frame-lengths-expected.txt: Added.
+        * websocket/tests/frame-lengths.html: Added.
+
 2009-12-07  Nikolas Zimmermann  <nzimmermann@rim.com>
 
         Not reviewed. Add two tests generating new results to gtks collection of tests doing so.
